fix models relation with gorm annotation
